--- a/file.Rmd
+++ b/file.Rmd
@@ -2,7 +2,7 @@
 title: "BTC Sports Betting"
 author: "Paul Sztorc"
 date: "April 13, 2016"
-output: html_document
+output: pdf_document
 ---
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
